@@ -42,7 +42,7 @@
 
 <addon id="plugin.video.free.cable"
        name="Free Cable"
-       version="0.1.2"
+       version="0.1.3"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
